--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -193,39 +193,37 @@
                 class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-12 review-form" id="review-form">
                 {% csrf_token %}
                 <h4 class="text-center m-2">Review this Trip</h4>
-                <p>How would you rate this trip?</p>
-                <div class="rating">
-                    <!--Star Rating-->
-                    <label for="rating10" title="5" class="d-none"></label>
-                    <input type="radio" name="rating" id="rating10" value="5" />
-                    <label for="rating10" title="5"></label>
-                    <input type="radio" name="rating" id="rating10" value="5" />
-                    <label for="rating9" title="4.5" class="half"></label>
-                    <input type="radio" name="rating" id="rating9" value="4.5" />
-                    <label for="rating8" title="4"></label>
-                    <input type="radio" name="rating" id="rating8" value="4" />
-                    <label for="rating7" title="3.5" class="half"></label>
-                    <input type="radio" name="rating" id="rating7" value="3.5" />
-                    <label for="rating6" title="3"></label>
-                    <input type="radio" name="rating" id="rating6" value="3" />
-                    <label for="rating5" title="2.5" class="half"></label>
-                    <input type="radio" name="rating" id="rating5" value="2.5" />
-                    <label for="rating4" title="2"></label>
-                    <input type="radio" name="rating" id="rating4" value="2" />
-                    <label for="rating3" title="1.5" class="half"></label>
-                    <input type="radio" name="rating" id="rating3" value="1.5" />
-                    <label for="rating2" title="1"></label>
-                    <input type="radio" name="rating" id="rating2" value="1" />
-                    <label for="rating1" title="0.5" class="half"></label>
-                    <input type="radio" name="rating" id="rating1" value="0.5" required />
-                </div>
+                 <p>How would you rate this trip?</p>
+                <!--Star Rating-->
+                <fieldset class="rating">
+                    <input type="radio" id="rating10" name="rating" value="5" />
+                    <label for="rating10" title="5 stars"></label>
+                    <input type="radio" id="rating9" name="rating" value="4.5" />
+                    <label class="half" for="rating9" title="4.5 stars"></label>
+                    <input type="radio" id="rating8" name="rating" value="4" />
+                    <label for="rating8" title="4 stars"></label>
+                    <input type="radio" id="rating7" name="rating" value="3.5" />
+                    <label class="half" for="rating7" title="3.5 stars"></label>
+                    <input type="radio" id="rating6" name="rating" value="3" />
+                    <label for="rating6" title="3 stars"></label>
+                    <input type="radio" id="rating5" name="rating" value="2.5" />
+                    <label class="half" for="rating5" title="2.5 stars"></label>
+                    <input type="radio" id="rating4" name="rating" value="2" />
+                    <label for="rating4" title="2 stars"></label>
+                    <input type="radio" id="rating3" name="rating" value="1.5" />
+                    <label class="half" for="rating3" title="1.5 stars"></label>
+                    <input type="radio" id="rating2" name="rating" value="1" />
+                    <label for="rating2" title="1 star"></label>
+                    <input type="radio" id="rating1" name="rating" value="0.5" required />
+                    <label class="half" for="rating1" title="0.5 star"></label>
+                </fieldset>
                 <div class="col">
                     <label for="subject" class="form-label">Review Title:</label>
                     <input type="text" name="subject" id="subject" class="form-control" required>
                 </div>
                 <div class="col">
                     <label for="review" class="form-label">Review:</label>
-                    <textarea name="review" id="review" rows="10" class="form-control"></textarea>
+                    <textarea name="review" id="review" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="col float-end">
                     <button type="submit" class="btn btn-next btn-submit" id="btn-submit">Submit Review</button>
@@ -268,6 +266,7 @@
                                 <i class="fas fa-star{% if review.rating == 2.5 %}-half{% elif review.rating < 3 %}-o{%endif%}"></i>
                                 <i class="fas fa-star{% if review.rating == 3.5 %}-half{% elif review.rating < 4 %}-o{%endif%}"></i>
                                 <i class="fas fa-star{% if review.rating == 4.5 %}-half{% elif review.rating < 5 %}-o{%endif%}"></i>
+                                {{ review.rating }}
                             </div>
                         </div>
                         </div>
@@ -343,6 +342,7 @@
     submit.addEventListener('sumbmit', function(e) {
         e.preventDefault();
         if (rating1 < 0) {
+            alert("Please rate this trip")
             rating.removeAttribute("required");
         } 
     });
